[gd_scene load_steps=17 format=2]

[ext_resource path="res://data/buildingInterior/Untitled_Artwork.png" type="Texture" id=1]
[ext_resource path="res://building_interior/jobs/jobs.gd" type="Script" id=2]
[ext_resource path="res://data/others/tileset.png" type="Texture" id=3]
[ext_resource path="res://actors/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://fade/newyear.tscn" type="PackedScene" id=5]
[ext_resource path="res://stats/money.tscn" type="PackedScene" id=6]
[ext_resource path="res://stats/timer.tscn" type="PackedScene" id=7]
[ext_resource path="res://menuScenes/jobs/jobselection.tscn" type="PackedScene" id=8]
[ext_resource path="res://menuScenes/jobs/jobselection1.tscn" type="PackedScene" id=9]
[ext_resource path="res://menuScenes/jobs/jobselection2.tscn" type="PackedScene" id=10]
[ext_resource path="res://notifications/job.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 80, 0, 80, 80, 0, 80 )

[sub_resource type="TileSet" id=2]
0/name = "tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 80 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 81.7026, 126.955 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 102.134, 214.215 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 204.048, 235.688 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 704.309, 425.804 )
scale = Vector2( 0.916932, 0.965268 )
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 2 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 65535, 0, 0, 17, 0, 0, 131071, 0, 0, 65553, 0, 0, 196607, 0, 0, 131089, 0, 0, 262143, 0, 0, 196625, 0, 0, 327679, 0, 0, 262161, 0, 0, 393215, 0, 0, 327697, 0, 0, 458751, 0, 0, 393233, 0, 0, 524287, 0, 0, 458769, 0, 0, 589823, 0, 0, 524305, 0, 0, 655359, 0, 0, 589841, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 657.332, 674.793 )
scale = Vector2( 2, 2 )

[node name="LowPayingJob" type="Area2D" parent="."]
position = Vector2( 1229.04, 624.453 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowPayingJob"]
position = Vector2( 7.5, 14.1759 )
shape = SubResource( 3 )

[node name="MedPayingJob" type="Area2D" parent="."]
position = Vector2( 871.084, 612.561 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MedPayingJob"]
position = Vector2( 12.6793, -56.5935 )
shape = SubResource( 4 )

[node name="HighPayingJob" type="Area2D" parent="."]
position = Vector2( 315.724, 645.859 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighPayingJob"]
position = Vector2( 16.4055, -109.042 )
shape = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="time" parent="CanvasLayer" instance=ExtResource( 7 )]
position = Vector2( 833.622, 13.6557 )

[node name="statsBar" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 14.4442
margin_top = 15.1285
margin_right = 233.444
margin_bottom = 258.129

[node name="jobselect" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
margin_left = 24.3312
margin_top = 39.9649
margin_right = 24.3312
margin_bottom = 39.965

[node name="jobselect2" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="jobselect3" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="newyeartransition" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
margin_top = -2.0
margin_right = 119.0
margin_bottom = 69.0
rect_scale = Vector2( 0.9, 0.9 )

[node name="Node2D" parent="CanvasLayer" instance=ExtResource( 11 )]
position = Vector2( 152, 64 )
scale = Vector2( 0.75, 0.75 )
[connection signal="timeout" from="CanvasLayer/time" to="CanvasLayer/newyeartransition" method="_on_time_timeout"]
[connection signal="transitioned" from="CanvasLayer/newyeartransition" to="CanvasLayer/time" method="_on_newyeartransition_transitioned"]
